[gd_scene load_steps=4 format=3 uid="uid://bf61ylh74thd1"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_qh63s"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_x0bl8"]
[ext_resource type="Script" path="res://scripts/button_0_0.gd" id="3_krj5w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x0bl8")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.034
anchor_bottom = 0.029
offset_left = 135.0
offset_top = 22.0
offset_right = 200.832
offset_bottom = 26.208
text = "Â¡Ch'api-T'uku!"
script = ExtResource("1_qh63s")

[node name="Button_0_0" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 58.0
offset_right = 155.0
offset_bottom = 89.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_0_1" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 61.0
offset_right = 211.0
offset_bottom = 92.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_0_2" type="Button" parent="."]
layout_mode = 0
offset_left = 239.0
offset_top = 59.0
offset_right = 271.0
offset_bottom = 90.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_1_0" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 108.0
offset_right = 155.0
offset_bottom = 139.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_1_1" type="Button" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 110.0
offset_right = 212.0
offset_bottom = 141.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_1_2" type="Button" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 111.0
offset_right = 269.0
offset_bottom = 142.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_2_0" type="Button" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 160.0
offset_right = 156.0
offset_bottom = 191.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_2_1" type="Button" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 161.0
offset_right = 213.0
offset_bottom = 192.0
text = "_"
script = ExtResource("3_krj5w")

[node name="Button_2_2" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 161.0
offset_right = 272.0
offset_bottom = 192.0
text = "_"
script = ExtResource("3_krj5w")

[connection signal="button_down" from="Button_0_0" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_0_0" to="Button_0_0" method="_on_button_down"]
[connection signal="button_down" from="Button_0_1" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_0_1" to="." method="_on_button_0_1_button_down"]
[connection signal="button_down" from="Button_0_1" to="Button_0_1" method="_on_button_down"]
[connection signal="button_down" from="Button_0_2" to="." method="_on_button_0_2_button_down"]
[connection signal="button_down" from="Button_0_2" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_0_2" to="Button_0_2" method="_on_button_down"]
[connection signal="button_down" from="Button_1_0" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_1_0" to="Button_1_0" method="_on_button_down"]
[connection signal="button_down" from="Button_1_1" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_1_1" to="Button_1_1" method="_on_button_down"]
[connection signal="button_down" from="Button_1_2" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_1_2" to="Button_1_2" method="_on_button_down"]
[connection signal="button_down" from="Button_2_0" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_2_0" to="Button_2_0" method="_on_button_down"]
[connection signal="button_down" from="Button_2_1" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_2_1" to="Button_2_1" method="_on_button_down"]
[connection signal="button_down" from="Button_2_2" to="." method="_on_button_0_0_button_down"]
[connection signal="button_down" from="Button_2_2" to="Button_2_2" method="_on_button_down"]
